--- a/package.json
+++ b/package.json
@@ -81,8 +81,7 @@
     "develop:create:db": "NODE_ENV=development ts-node --transpile-only ./integration-tests/development/create-database.js",
     "release:next": "changeset publish --no-git-tags --snapshot --tag next",
     "version:next": "changeset version --snapshot next",
-    "check:freshness": "node ./scripts/freshness-check.js",
-    "start": "medusa migrations run && medusa start"
+    "check:freshness": "node ./scripts/freshness-check.js"
   },
   "dependencies": {
     "@changesets/changelog-github": "^0.4.5",
